# cmtraceopen-web

./: .dockerignore  .env.example  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  audit.toml  docker-compose.ci.yml  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: agent-msi.yml  audit.yml  ci.yml  codeql.yml  compose-smoke.yml  publish-api.yml  semgrep.yml  sign-agent.yml  submodule-bump.yml
cmtrace-wasm/: Cargo.toml
cmtrace-wasm/src/: lib.rs
crates/agent/: Cargo.toml  README.md
crates/agent/installer/wix/: Config.wxs  Files.wxs  Product.wxs  README.md  README.txt  Service.wxs  Variables.wxi  build.ps1  config.toml
crates/agent/installer/wix/CustomActions/: CertCheck.ps1
crates/agent/src/: config.rs  config_sync.rs  lib.rs  main.rs  queue.rs  redact.rs  runtime.rs  scheduler.rs  service.rs  tls.rs  uploader.rs
crates/agent/src/collectors/: agent_logs.rs  dsregcmd.rs  event_logs.rs  evidence.rs  logs.rs  mod.rs
crates/agent/tests/: redact_integration.rs  scheduler_integration.rs  service_smoke.rs  upload_integration.rs
crates/api-server/: Cargo.toml  Dockerfile  build.rs
crates/api-server/migrations/: 0001_initial.sql  0002_entries.sql  0002_entries_and_files.sql  0003_audit_log.sql  0004_device_config.sql
crates/api-server/migrations-pg/: 0001_initial.sql  0002_entries.sql
crates/api-server/src/: config.rs  error.rs  extract.rs  lib.rs  main.rs  state.rs  tls.rs
crates/api-server/src/auth/: crl.rs  device_identity.rs  mod.rs
crates/api-server/src/middleware/: audit.rs  mod.rs  proxy.rs  rate_limit.rs
crates/api-server/src/pipeline/: mod.rs  parse_worker.rs  retention.rs
crates/api-server/src/routes/: admin.rs  config.rs  devices.rs  entries.rs  files.rs  health.rs  ingest.rs  metrics.rs  mod.rs  sessions.rs  status.rs
crates/api-server/src/storage/: audit_sqlite.rs  blob_azure.rs  blob_fs.rs  blob_object_store.rs  meta_postgres.rs  meta_sqlite.rs  mod.rs
crates/api-server/tests/: audit_integration.rs  auth_integration.rs  azure_blob_integration.rs  cors_integration.rs  entries_query_integration.rs  ingest_integration.rs  metrics_integration.rs  migrations_parity.rs  mtls_integration.rs  parse_integration.rs  peer_cert_header_integration.rs  rate_limit_integration.rs  wave4_e2e.rs
crates/common-wire/: Cargo.toml
crates/common-wire/src/: lib.rs
dev/bigmac-runner-kit/: README.md  ansible.cfg
dev/bigmac-runner-kit/examples/: hello-service.yml  shell-only-deploy.sh
dev/bigmac-runner-kit/inventory/: hosts.yml
dev/bigmac-runner-kit/playbooks/: deploy-api.yml  deploy.yml
dev/bigmac-runner-kit/scripts/: README.md  redeploy.sh
docs/: CONTRIBUTING.md  architecture.md  release.md
docs/adr/: 0001-postgres-storage-types.md
docs/design-system/: AUDIT-2026-04-27.md  README.md  SKILL.md  SURFACE-MAP-2026-04-27.md  tokens.css
docs/provisioning/: 01-windows-test-vm.md  02-entra-app-registration.md  03-intune-cloud-pki.md  04-windows-test-vm.md  05-intune-graph-deploy.md
docs/release-notes/: api-v0.1.0.md
docs/superpowers/plans/: 2026-04-24-viewer-command-bridge.md
docs/superpowers/specs/: 2026-04-24-viewer-command-bridge-design.md
docs/wave4/: 01-msi-design.md  02-code-signing.md  02a-sign-every-component.md  03-beta-pilot-runbook.md  04-day2-operations.md  05-azure-deploy.md  06-crl-wiring.md  07-build-vm-runbook.md  08-bundle-retention.md  09-agent-service-dispatcher.md  10-postgres-migration.md  11-audit-log.md  12-alerting.md  13-sbom-slsa.md  14-redaction.md  15-agent-msi-ci.md  16-e2e-test.md  17-capacity-results.md  18-backup-restore.md  19-rate-limiting.md  20-dr-rehearsal.md  21-agent-network-time.md  22-config-push.md  PICKUP-HERE.md  dr-rehearsal-history.md
infra/azure/: .gitignore  README.md  locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
infra/observability/: alertmanager-config.yaml  grafana-dashboard.json  prometheus-rules.yaml
infra/viewer/: Dockerfile  Dockerfile.dockerignore  nginx.conf
scripts/: wasm-smoke.mjs
src/: App.tsx  main.tsx  test-setup.ts
src/components/: ApiMode.tsx  AuthSettings.tsx  DeviceLogViewer.tsx  DevicesPanel.test.tsx  DevicesPanel.tsx  DropZone.tsx  EntryList.tsx  FilesPanel.tsx  FilterBar.tsx  FindBar.tsx  LocalMode.tsx  RoleGate.test.tsx  RoleGate.tsx  StatusBar.tsx  ViewerShell.tsx
src/components/layout/: FileSidebar.tsx  TabStrip.tsx  Toolbar.tsx
src/components/log-view/: DiffHeader.tsx  DiffView.tsx  DnsWorkspaceBanner.tsx  MergeLegendBar.tsx
src/components/middle/: FleetList.test.tsx  FleetList.tsx  MiddlePane.test.tsx  MiddlePane.tsx  SessionTree.test.tsx  SessionTree.tsx
src/components/rail/: DeviceRail.tsx  (+5 more)
src/lib/: api-client.ts  auth-config.ts  bridge-state.test.tsx  bridge-state.tsx  constants.ts  diff-entries.ts  dto-to-entry.ts  file-pickers.ts  health-dot.test.ts  health-dot.ts  keyboard-shortcuts.test.tsx  keyboard-shortcuts.tsx  kql-autocomplete.test.ts  kql-autocomplete.ts  kql-executor-stub.test.ts  kql-executor-stub.ts  kql-lexer.test.ts  kql-lexer.ts  kql-schema.test.ts  kql-schema.ts  log-accessibility.ts  log-types.ts  theme-context.tsx  theme.test.ts  theme.ts  use-debounce.ts  wasm-bridge.ts  workspace-context.tsx
src/styles/: tokens.css
tests/load/: README.md  k6-bundle-ingest.js  k6-query-mix.js  run-all-backends.sh
tools/: README.md  agent-redact-test.sh  query.sh  ship-bundle.sh
tools/entra-provision/: Provision-CmtraceEntra.ps1  README.md
tools/fixtures/: .gitignore  README.md  build.sh
tools/intune-deploy/: Deploy-CmtraceAgent.ps1  Pack-CmtraceAgent.ps1  README.md
tools/intune-provision/: AGENT-INSTALL.md  Install-CmtraceRunner.ps1  Install-RunnerPrereqs.ps1  Provision-CmtraceIntune.ps1  README.md
tools/ninjaone-deploy/: Invoke-CmtraceAgentInstall.ps1  README.md  bootstrap-pilot-config.ps1  diagnose-cmtrace-agent.ps1  install-cmtrace-agent.ps1  reconfigure-cmtrace-agent.ps1  restart-agent.ps1  swap-to-pilot.ps1
tools/ops/: README.md  blob-backup.sh  pg-backup.sh  pg-restore.sh
(+58 files in other folders)
