# Self-hosting workspace — see ../Cargo.toml's `exclude` list for why.
# Lets `wasm-pack build cmtrace-wasm` resolve without dragging the
# cross-repo path dep into the root workspace's Docker build context.
[workspace]

[package]
name = "cmtrace-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "wasm-bindgen wrapper around cmtraceopen-parser for the cmtraceopen-web browser viewer."
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Path dep on the cmtraceopen submodule. The submodule pointer is managed at
# the cmtraceopen-web repo root (.gitmodules); bump it with a deliberate
# `git submodule update --remote` + commit when you want to pick up upstream
# parser changes. Reproducible + reviewable.
cmtraceopen-parser = { path = "../cmtraceopen/crates/cmtraceopen-parser" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]

# wasm-opt is run by wasm-pack on release builds; aggressive size optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
