[package]
name = "agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "CMTrace Open endpoint agent. Runs as a Windows service on managed devices; collects logs + evidence and uploads to the api-server."
license = "MIT"

[[bin]]
name = "cmtraceopen-agent"
path = "src/main.rs"

[lib]
name = "cmtraceopen_agent"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
common-wire = { path = "../common-wire" }

# Windows-only deps. Gated so the crate still compiles on Linux CI runners.
# Keep the feature surface minimal here — pull in additional Win32 feature
# modules only as concrete collectors / service code actually need them.
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_EventLog"] }
