[package]
name = "agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "CMTrace Open endpoint agent. Runs as a Windows service on managed devices; collects logs + evidence and uploads to the api-server."
license = "MIT"

[[bin]]
name = "cmtraceopen-agent"
path = "src/main.rs"

[lib]
name = "cmtraceopen_agent"
path = "src/lib.rs"

[dependencies]
# `process` for wevtutil/dsregcmd shell-outs on Windows; `fs` + `io-util` for
# async zip staging; `time` for backoff math (and paused-clock tests).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util", "process", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
common-wire = { path = "../common-wire" }
# Chunked upload client. Intentionally NO TLS feature here — both of the
# pure-Rust options on reqwest 0.12 pull a cryptoprovider transitive that
# breaks our build:
#   * `rustls-tls` (webpki) → pulls `ring`, which needs `clang` to build
#     on aarch64-windows dev boxes (docs.rs/cc requirements). Ubuntu CI
#     is fine; the developer experience isn't.
#   * `rustls-tls-no-provider` + aws-lc-rs → pulls `aws-lc-sys`, which
#     needs cmake + NASM and actively fails to link on aarch64-windows.
# The rest of the workspace (api-server, common-wire) already avoids
# both of those transitively — see api-server's `tls-none` sqlx feature.
# Wave 2 M2 adds mTLS via a hand-picked provider once the rustls-platform
# story settles; until then the agent talks plaintext HTTP to the
# api-server (or to a TLS-terminating reverse proxy that fronts it in
# production). `stream` is retained for future body-stream work.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
# Zip: drop default features so bzip2 / deflate64 / zstd / xz don't land on
# the transitive graph. `deflate` alone matches the api-server's evidence-zip
# reader (see crates/api-server/Cargo.toml).
zip = { version = "2", default-features = false, features = ["deflate"] }
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[dev-dependencies]
# Drive an in-process api-server during integration tests. Match the
# api-server's own dev-dep features (loopback, no TLS) to share the wire.
api-server = { path = "../api-server" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time", "test-util"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-none", "sqlite", "macros"] }
axum = "0.8"

# Windows-only deps. Gated so the crate still compiles on Linux CI runners.
# Keep the feature surface minimal here — pull in additional Win32 feature
# modules only as concrete collectors / service code actually need them.
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.7"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_SystemInformation"] }
