[package]
name = "agent"
version = "0.1.2"
edition = "2021"
rust-version = "1.77.2"
description = "CMTrace Open endpoint agent. Runs as a Windows service on managed devices; collects logs + evidence and uploads to the api-server."
license = "MIT"

[[bin]]
name = "cmtraceopen-agent"
path = "src/main.rs"

[lib]
name = "cmtraceopen_agent"
path = "src/lib.rs"

[dependencies]
# `process` for wevtutil/dsregcmd shell-outs on Windows; `fs` + `io-util` for
# async zip staging; `time` for backoff math (and paused-clock tests).
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util", "process", "time", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"
common-wire = { path = "../common-wire" }
# Chunked upload client. We hand reqwest a pre-built rustls `ClientConfig`
# via `use_preconfigured_tls(..)`, so we deliberately pick the
# `*-no-provider` feature variants — the non-suffixed
# (`rustls-tls-manual-roots`, `rustls-tls-native-roots`) variants
# transitively enable `__rustls-ring`, which would pull the `ring`
# crate back in and double-link the crypto core. We want the choice
# of provider to live in *our* code (see the `rustls` dep below) so
# the Wave 3 mTLS path can attach a client cert chain through the same
# ClientConfig.
#
# `stream` is kept so the future body-streaming uploader can swap in
# without another features churn.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "rustls-tls-manual-roots-no-provider",
    "rustls-tls-native-roots-no-provider",
] }
# Crypto provider for rustls. We pick `aws-lc-rs` over `ring` for two
# reasons:
#   * No `clang` build dep on Linux *or* Windows. `ring` wants clang on
#     aarch64-windows; `aws-lc-rs` builds with cmake + NASM, both of
#     which are present on the GitHub Ubuntu/Windows CI images by
#     default. (The dev box doesn't have NASM yet — see README.)
#   * FIPS-ready crypto core (FIPS 140-3 cert in flight upstream),
#     which matters for the regulated-customer side of the deployment
#     story even if we don't formally claim FIPS compliance today.
# The provider is installed once at startup in `uploader.rs`.
# Re-list `logging`, `std`, `tls12` — they're in rustls's default feature
# set but `default-features = false` strips everything. We DO want them
# (TLS 1.2 fallback for older corp proxies; std for the default
# `BufReader` impls; logging so rustls handshake errors land in our
# tracing pipeline). What we DON'T want is the `prefer-post-quantum`
# default, which is debatable and adds bytes-on-the-wire we haven't
# vetted with the api-server's TLS terminator yet.
rustls = { version = "0.23", default-features = false, features = [
    "aws-lc-rs",
    "logging",
    "std",
    "tls12",
] }
rustls-pemfile = "2"
rustls-native-certs = "0.8"
# Zip: drop default features so bzip2 / deflate64 / zstd / xz don't land on
# the transitive graph. `deflate` alone matches the api-server's evidence-zip
# reader (see crates/api-server/Cargo.toml).
zip = { version = "2", default-features = false, features = ["deflate"] }
glob = "0.3"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
regex = "1"
croner = "3.0.1"
rand = "0.9"
# Metrics facade — same version as api-server. The agent emits lightweight
# counters (collection successes/failures) so ops can alert on collection
# health. The recorder backend is intentionally *not* wired up in the
# agent binary yet (no HTTP /metrics endpoint for the edge agent); using
# the `metrics` facade means adding a backend later is a one-liner.
metrics = "0.24"

[dev-dependencies]
# Drive an in-process api-server during integration tests. Match the
# api-server's own dev-dep features (loopback, no TLS) to share the wire.
api-server = { path = "../api-server" }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time", "test-util"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-none", "sqlite", "macros"] }
axum = "0.8"

# Windows-only deps. Gated so the crate still compiles on Linux CI runners.
# Keep the feature surface minimal here — pull in additional Win32 feature
# modules only as concrete collectors / service code actually need them.
[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.8"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_EventLog", "Win32_System_SystemInformation"] }

[features]
# The `redaction` feature gates the integration test suite in
# `tests/redact_integration.rs`. The `regex` crate is a hard dependency
# (always compiled) because redaction is on by default and the config
# structs must deserialise regardless of feature flags. The flag exists so
# CI can explicitly opt-in to the full integration test run via
# `cargo test --features redaction`.
redaction = []
