[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "CMTrace Open log-collection API server. Receives log bundles from on-device agents; serves per-device log queries to the web viewer."
license = "MIT"

[[bin]]
name = "cmtraceopen-api"
path = "src/main.rs"

[lib]
name = "api_server"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
common-wire = { path = "../common-wire" }
# Storage: SQLite via sqlx. Use runtime-tokio + tls-none — SQLite is a
# local file so no TLS is needed, and avoiding rustls/ring keeps a C
# toolchain (clang) off the build path on aarch64-windows dev boxes.
# When we add Postgres (M2+), pick tls-rustls-aws-lc-rs explicitly.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-none", "sqlite", "chrono", "uuid", "macros", "migrate"] }
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"
async-trait = "0.1"
base64 = "0.22"
# Operator bearer-token auth (Entra ID / Azure AD). `jsonwebtoken` drags in
# `ring` transitively and we have a workspace rule against ring (see README);
# `jwt-simple` ships with pure-rust crypto (rsa / p256 / ed25519-dalek) and
# avoids ring entirely. `reqwest` is configured with `native-tls` (Schannel
# on Windows, SecureTransport on macOS, OpenSSL on Linux) for the same
# reason — `rustls-tls` pulls ring unless swapped to aws-lc-rs.
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
# Operator-auth JWKS cache needs non-blocking read-heavy access.
parking_lot = "0.12"
# Parse-on-ingest pipeline. Path-dep on the sibling cmtraceopen submodule;
# the submodule pointer is managed at the repo root (.gitmodules). The
# crate is pure Rust (no filesystem I/O, no tokio) and compiles to
# native + wasm32, so pulling it into the server is cheap.
cmtraceopen-parser = { path = "../../cmtraceopen/crates/cmtraceopen-parser" }
# Evidence-zip bundles are unzipped in-memory by the parse worker. We use
# default features only (deflate) so no ring/openssl drift into the
# transitive tree; the integration build verifies this.
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
# Ingest integration tests use reqwest with json-only features (native-tls
# feature is already pulled in via the main `reqwest` entry, so no extra
# build cost here — this entry exists so the test-only client can hit the
# local loopback server over plain HTTP without the tls stack complaining).
# The operator-auth integration test signs short-lived tokens with jwt-simple.
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time"] }
# The parse-on-ingest integration test builds a synthetic evidence-zip
# bundle in memory and then re-uses sqlx to assert on the entries table.
# Reuse the same zip crate the api-server depends on so there's one
# code path being exercised end-to-end.
zip = { version = "2", default-features = false, features = ["deflate"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-none", "sqlite", "macros"] }
