[package]
name = "api-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "CMTrace Open log-collection API server. Receives log bundles from on-device agents; serves per-device log queries to the web viewer."
license = "MIT"

[[bin]]
name = "cmtraceopen-api"
path = "src/main.rs"

[lib]
name = "api_server"
path = "src/lib.rs"

[features]
# `mtls`, `crl`, `azure`, and `sqlite` are all default-on so the production binary:
#   - terminates TLS and validates client certs (`mtls`)
#   - polls Cloud PKI CRLs and rejects revoked certs (`crl`)
#   - can flip `CMTRACE_BLOB_BACKEND=Azure` at runtime (`azure`)
#   - uses SQLite for metadata storage (`sqlite`)
#
# Any of them can be turned off via `--no-default-features` (with explicit
# re-enables) on dev boxes that lack cmake/NASM (`mtls` brings the
# aws-lc-sys C build), to drop the x509-parser dep entirely (`crl`), or to
# skip the Azure object_store transitives (`azure`). The Local blob backend
# (object_store::local::LocalFileSystem) ships in object_store's base build,
# so the local-FS dev path keeps working without the Azure transitives.
#
# Database backend flags:
#   `sqlite` — local file / in-memory SQLite (dev default, no TLS required).
#   `postgres` — PostgreSQL / Azure Database for PostgreSQL Flexible Server.
#                Activates `tls-rustls-aws-lc-rs` because Azure Postgres
#                enforces TLS; `tls-none` and `tls-rustls-aws-lc-rs` may
#                coexist in sqlx 0.8 — rustls wins for network drivers, and
#                SQLite (file-based) ignores TLS entirely.
#
# Future S3 / GCS backends slot in here as additional feature flags
# (`s3 = ["object_store/aws"]`, `gcs = ["object_store/gcp"]`) and a matching
# `BlobBackend` enum variant in `config.rs`.
default = ["mtls", "crl", "azure", "sqlite"]

# SQLite metadata backend. Uses `tls-none` so sqlite-only builds on dev boxes
# without cmake/NASM don't trigger the aws-lc-sys C+asm build path in sqlx's
# TLS drivers (SQLite is a local file, TLS is meaningless for it). Note: the
# top-level binary already depends on aws-lc-rs via `rustls`; this flag only
# controls whether sqlx's *network* drivers (postgres, mysql) are built with
# TLS. SQLite doesn't use those drivers, so `tls-none` is safe here.
sqlite = ["sqlx/sqlite", "sqlx/tls-none"]

# PostgreSQL metadata backend. Activates the postgres sqlx driver and the
# rustls-aws-lc-rs TLS connector required for Azure Database for PostgreSQL
# Flexible Server (which enforces SSL/TLS on all connections). Having both
# `tls-none` (from `sqlite`) and `tls-rustls-aws-lc-rs` active simultaneously
# is valid in sqlx 0.8: the rustls connector handles postgres connections while
# SQLite (a file driver) ignores the TLS layer entirely.
postgres = ["sqlx/postgres", "sqlx/tls-rustls-aws-lc-rs"]

# Azure Blob Storage backend for the BlobStore abstraction. Pulls in
# `object_store/azure` so `CMTRACE_BLOB_BACKEND=Azure` actually works at
# runtime. With the feature off, only the Local backend is available.
azure = ["object_store/azure"]

# Wave 3 mTLS termination + cert-derived DeviceIdentity. Disable to skip
# building the rustls / aws-lc-sys C+asm dependencies. With the feature off,
# `Config::tls_enabled` is forced to `false` and the only device-identity
# surface is the legacy `X-Device-Id` header.
mtls = [
    "dep:axum-server",
    "dep:rustls-pemfile",
    "dep:rustls-webpki",
    "dep:x509-parser",
    "dep:http",
    "dep:rustls-pki-types",
    "dep:tokio-rustls",
]

# CRL polling for client-cert revocation. Hourly fetch + DER parse of the
# Cloud PKI Root + Issuing CRLs; the resulting `is_revoked(&[u8])` API
# is consulted by the WebPkiClientVerifier wired up under `mtls`. Drops
# x509-parser when disabled.
crl = ["dep:x509-parser"]

# Optional integration tests that mint a self-signed CA + leaf with `rcgen`,
# spin up the TLS-terminating server, and drive a real mTLS client through
# the ingest flow. Gated behind a feature so the default
# `cargo test --workspace` pass doesn't require any extra setup; CI flips
# `--features test-mtls` on the api-server crate explicitly. Implies `mtls`
# since the test needs the TLS server bring-up code.
test-mtls = ["mtls", "dep:rcgen", "dep:tokio-rustls"]

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs", "io-util", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
common-wire = { path = "../common-wire" }
# Storage: sqlx with runtime-tokio. Driver (sqlite / postgres) and TLS are
# controlled by the `sqlite` / `postgres` Cargo features above so that:
#   - sqlite-only builds use `tls-none` (no TLS needed for a local file; avoids
#     the aws-lc-sys C+asm build path in sqlx's network TLS drivers).
#   - postgres builds add `tls-rustls-aws-lc-rs` (Azure Postgres requires TLS).
#   - Both drivers may coexist: rustls handles postgres connections; SQLite
#     (file-based) ignores TLS entirely.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "chrono", "uuid", "macros", "migrate"] }
uuid = { version = "1", features = ["serde", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
bytes = "1"
async-trait = "0.1"
base64 = "0.22"
# Per-route request counter map, surfaced on the dev status page (`GET /`).
# `DashMap` gives us lock-free reads/writes per-key — the middleware bumps
# one bucket per request and the status handler sweeps all buckets to
# render a top-N table. A `Mutex<HashMap>` would also work but would
# serialize every counter bump across all routes; `DashMap` shards
# internally so two requests on different routes don't contend.
dashmap = "6"
# Operator bearer-token auth (Entra ID / Azure AD). `jsonwebtoken` drags in
# `ring` transitively and we have a workspace rule against ring (see README);
# `jwt-simple` ships with pure-rust crypto (rsa / p256 / ed25519-dalek) and
# avoids ring entirely.
#
# `reqwest` runs on rustls + aws-lc-rs to match the agent (PR #37) and the
# Wave 3 mTLS stack. We pick `rustls-tls-native-roots-no-provider` rather
# than `rustls-tls-native-roots` because the latter transitively pulls
# `__rustls-ring`, which would re-introduce ring; the `-no-provider` variant
# lets us install aws-lc-rs explicitly via the `rustls` crate. The crypto
# provider is installed exactly once at startup in `main.rs` (see
# `rustls::crypto::aws_lc_rs::default_provider().install_default()`).
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots-no-provider"] }
# Operator-auth JWKS cache needs non-blocking read-heavy access.
parking_lot = "0.12"
# Parse-on-ingest pipeline. Path-dep on the sibling cmtraceopen submodule;
# the submodule pointer is managed at the repo root (.gitmodules). The
# crate is pure Rust (no filesystem I/O, no tokio) and compiles to
# native + wasm32, so pulling it into the server is cheap.
cmtraceopen-parser = { path = "../../cmtraceopen/crates/cmtraceopen-parser" }
# Evidence-zip bundles are unzipped in-memory by the parse worker. We use
# default features only (deflate) so no ring/openssl drift into the
# transitive tree; the integration build verifies this.
zip = { version = "2", default-features = false, features = ["deflate"] }
# Object-store abstraction. Local-FS is always available (used in dev + tests
# and as the underlying impl for `LocalFsBlobStore`). The `azure` cargo
# feature on this crate enables `object_store/azure` so production deploys
# can flip `CMTRACE_BLOB_BACKEND=Azure`. We intentionally pin
# `default-features = false` so we control which transitive backends (and
# their TLS stacks) get pulled in — the only one we want today is `azure`,
# and that one inherits reqwest's `native-tls` path the api-server already
# uses (no `ring`, no `openssl-sys` should appear in `cargo tree`).
object_store = { version = "0.13", default-features = false }
futures = "0.3"
# --- Wave 3 mTLS termination ---------------------------------------------
# axum-server is the TLS-terminating wrapper around hyper that gives us
# access to the rustls `ServerConnection`'s peer-cert handle (axum's own
# `serve` does not surface the peer cert). The `tls-rustls-no-provider`
# feature avoids pulling rustls' default `ring` provider — we explicitly
# wire the `aws-lc-rs` provider below to keep the workspace ring-free
# (see the README rule + the comment on the `jwt-simple` dep above).
#
# Gated behind the default `mtls` feature: the underlying `aws-lc-sys`
# crate compiles a chunk of C/asm (cmake + NASM at build time). CI Ubuntu
# has both; aarch64-windows-msvc dev boxes typically don't, so the dev
# can drop the feature to compile-check the rest of the codebase
# (`cargo check -p api-server --no-default-features`). When the feature
# is off, the `tls_enabled` config flag is unconditionally `false`.
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"], optional = true }
# rustls is non-optional because reqwest's `rustls-tls-native-roots-no-provider`
# feature pulls rustls regardless, and we install the aws-lc-rs provider once
# at startup for both the reqwest client (JWKS fetch) and the axum-server TLS
# stack (Wave 3 mTLS). Adding `std` here is required for axum-server's
# tls-rustls-no-provider config; reqwest doesn't care.
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
rustls-pemfile = { version = "2", optional = true }
# `webpki` is pulled transitively by `rustls`, but we depend on it
# explicitly so the `WebPkiClientVerifier` builder path is available.
rustls-webpki = { version = "0.103", default-features = false, features = ["std", "aws-lc-rs"], optional = true }
# Shared by both `mtls` (re-parses leaf DER for SAN URI extraction) and
# `crl` (parses the DER-encoded CRL list from Cloud PKI distribution
# points). The optional `verify` feature on x509-parser pulls `ring`,
# which is banned workspace-wide (see top-of-file Cargo.toml note on
# jwt-simple) — leave it off and rely on the rustls-webpki trust path
# for signature checks.
x509-parser = { version = "0.16", optional = true }
# tls.rs imports these directly. They're transitively pulled by axum +
# rustls + axum-server, but Rust requires explicit deps for direct `use`
# statements. Optional + mtls-gated to keep the no-mtls build slim.
# `tokio-rustls` itself is declared once below in [dependencies.tokio-rustls]
# (shared between `mtls` and `test-mtls` feature gates).
http = { version = "1", optional = true }
rustls-pki-types = { version = "1", optional = true }
# Prometheus metrics. The metrics-rs facade (`metrics`) decouples emit
# sites from the recorder backend, and `metrics-exporter-prometheus`
# renders the standard text-exposition format that Prometheus + Grafana
# scrape natively. Both crates are tiny and pure-rust — no ring/openssl
# pulled in (verified by the workspace `cargo tree` rule).
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
# CIDR parsing for CMTRACE_TRUSTED_PROXY_CIDR (AppGW-terminated mTLS) and
# the trusted-proxy IP-source check used by the rate limiter.
# Pure-Rust, no ring / openssl dependency.
ipnet = "2"

[dependencies.rcgen]
version = "0.13"
optional = true
default-features = false
features = ["aws_lc_rs", "pem"]

[dependencies.tokio-rustls]
version = "0.26"
optional = true
default-features = false
features = ["aws-lc-rs"]

[dev-dependencies]
# Ingest integration tests use reqwest with json-only features. The TLS
# stack is already pulled in via the main `reqwest` entry (rustls +
# aws-lc-rs, see above), so this dev entry exists so the test-only client
# can hit the local loopback server over plain HTTP without re-paying for
# the tls feature compile.
# The operator-auth integration test signs short-lived tokens with jwt-simple.
jwt-simple = { version = "0.12", default-features = false, features = ["pure-rust"] }
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "io-util", "sync", "time"] }
# The parse-on-ingest integration test builds a synthetic evidence-zip
# bundle in memory and then re-uses sqlx to assert on the entries table.
# Reuse the same zip crate the api-server depends on so there's one
# code path being exercised end-to-end.
zip = { version = "2", default-features = false, features = ["deflate"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-none", "sqlite", "postgres", "macros"] }
# Note: rcgen + tokio-rustls are intentionally NOT mirrored into the
# default dev-dependencies. The gated `test-mtls` integration test pulls
# them via the `[features]` block above, so a default `cargo test` on a
# dev box without cmake/NASM never touches aws-lc-sys.
