[package]
name = "common-wire"
version = "0.1.0"
edition = "2021"
rust-version = "1.77.2"
description = "Shared request/response DTOs and protocol types for the CMTrace Open platform (agent ↔ api-server ↔ web viewer)."
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
# When DTOs need to re-export LogEntry from the parser, decide between:
#   - sibling path dep on ../../../cmtraceopen/crates/cmtraceopen-parser
#     (mirrors cmtrace-wasm; requires sibling checkout)
#   - publish cmtraceopen-parser to crates.io / GitHub Packages
#   - duplicate the DTO shape here with serde-compatible field layout
# Deferred until the first DTO actually needs it.
